--- a/Lab/app/src/main/res/layout/activity_main.xml
+++ b/Lab/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.elysium.lab.MainActivity">
+    tools:context="com.elysium.lab.MainActivity"
+    android:background="#37474F" >
 
     <LinearLayout
         android:id="@+id/top"
@@ -21,14 +22,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Tell me your wish!"
-            android:maxLines="1"/>
+            android:textColorHint="#e9e9e9"
+            android:backgroundTint="#80cbc4"
+            android:maxLines="1"
+            android:textColor="#e9e9e9"/>
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Make a Wish"
-            android:layout_gravity="center"/>
+            android:textStyle="bold"
+            android:background="@drawable/round_shape"
+            android:textColor="#e9e9e9"
+            android:elevation="0dp"
+            android:padding="10dp"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_gravity="bottom|center"
+            android:hapticFeedbackEnabled="true" />
 
     </LinearLayout>
 
@@ -37,8 +48,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Wish"
+        android:textColor="#e9e9e9"
         android:textSize="25sp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
     <LinearLayout
         android:id="@+id/bottom"
